[gd_scene load_steps=38 format=2]

[ext_resource path="res://Objects/ConveyorBelt.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Others/Hand.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Console.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Tools/Spoon.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/Tools/Output.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/Tools/RiceBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/Cutting_Board.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/SushiLove_menu.ogg" type="AudioStream" id=8]
[ext_resource path="res://Arts/Scene/background.png" type="Texture" id=9]
[ext_resource path="res://Objects/Tools/Trash.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sounds/SushiLove.ogg" type="AudioStream" id=11]
[ext_resource path="res://Sounds/SushiHint.wav" type="AudioStream" id=12]
[ext_resource path="res://Arts/Font/UI_font.tres" type="DynamicFont" id=13]
[ext_resource path="res://Objects/MainMenu.gd" type="Script" id=14]
[ext_resource path="res://Arts/Menu/Logo@2x.png" type="Texture" id=15]
[ext_resource path="res://Arts/Menu/RollLogo@2x.png" type="Texture" id=16]
[ext_resource path="res://Arts/Menu/Credits.png" type="Texture" id=17]
[ext_resource path="res://Arts/ConveyorBelt.shader" type="Shader" id=18]
[ext_resource path="res://Arts/Font/Staatliches-Regular.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://Arts/Menu/Music.png" type="Texture" id=20]
[ext_resource path="res://Arts/Menu/Music_Mute.png" type="Texture" id=21]
[ext_resource path="res://Arts/Menu/Sound_Mute.png" type="Texture" id=22]
[ext_resource path="res://Arts/Menu/Sound.png" type="Texture" id=23]
[ext_resource path="res://Sounds/tap.wav" type="AudioStream" id=24]
[ext_resource path="res://Sounds/clock.wav" type="AudioStream" id=25]
[ext_resource path="res://Sounds/SushiOver.wav" type="AudioStream" id=26]
[ext_resource path="res://Arts/Font/UI_font_small.tres" type="DynamicFont" id=27]
[ext_resource path="res://Arts/Lightmask.png" type="Texture" id=28]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 18 )
shader_param/speed = -0.156

[sub_resource type="DynamicFont" id=2]
size = 350
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=3]
size = 90
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=4]
size = 150
font_data = ExtResource( 19 )

[sub_resource type="Animation" id=5]
resource_name = "game_over"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -753 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/HUD/CenterContainer/Label:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1 ),
"transitions": PoolRealArray( 0.5, 1, 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanvasLayer/HUD/CenterContainer/Label:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanvasLayer/HUD/CenterContainer/Label:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "OFF WORK" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("CanvasLayer/HUD/CenterContainer/Label:rect_pivot_offset")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 609.5, 219 ) ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("GameOver")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("CanvasLayer/HUD/CenterContainer2/Time:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("Node2D/ConveyorBelt")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "change_conveyor_speed"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.5
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 0, -2000 ), Vector2( 0, -753 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/HUD/SceneBlocker:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.04 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("Node2D/ConveyorBelt")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.02 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.156 ],
"method": "change_conveyor_speed"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Node2D/Credit:material:shader_param/speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.02 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -0.156 ]
}

[sub_resource type="Animation" id=7]
resource_name = "menu_outro"
length = 0.5
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Vector2( 0, -753 ), Vector2( 0, -2000 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/HUD/SceneBlocker:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.46, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}

[sub_resource type="Animation" id=8]
length = 5.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5, 0.8, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 0.5, 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, -753 ), Vector2( 0, -753 ), Vector2( 0, -798.255 ), Vector2( 0, -767.142 ), Vector2( 0, -781.284 ), Vector2( 0, -753 ), Vector2( 0, -753 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Node2D/ConveyorBelt")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ -0.156 ],
"method": "change_conveyor_speed"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Menu/Logo:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.02 ),
"transitions": PoolRealArray( 1, 0.203063 ),
"update": 1,
"values": [ ExtResource( 16 ), ExtResource( 15 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Menu/Logo:rect_scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.04, 0.12, 0.24, 0.4 ),
"transitions": PoolRealArray( 0.5, 2, 0.5, 2, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 1, 1 ), Vector2( 0.85, 0.85 ), Vector2( 0.9, 0.9 ), Vector2( 0.8, 0.8 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Node2D/Credit:material:shader_param/speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -0.156, -0.156, 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Node2D/Credit:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5, 1.58 ),
"transitions": PoolRealArray( 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 0, 181.16 ), Vector2( 0, 181.16 ), Vector2( -2000, 181.16 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Node2D/Credit:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.58 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("CanvasLayer/HUD/CenterContainer/Label:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 2, 2.2, 2.7, 3, 3.2, 3.7, 4, 4.2, 4.7, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("CanvasLayer/HUD/CenterContainer/Label:rect_scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 2, 2.2, 2.7, 2.99, 3, 3.2, 3.7, 3.99, 4, 4.2, 4.7, 5 ),
"transitions": PoolRealArray( 0.5, 1, 2, 1, 0.5, 1, 2, 1, 0.5, 1, 2, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 2, 2 ), Vector2( 0.5, 0.5 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("CanvasLayer/HUD/CenterContainer/Label:text")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "3 MIN", "READY", "GO" ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("CanvasLayer/HUD/CenterContainer/Label:rect_pivot_offset")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 2, 2.99, 3, 3.99, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 315, 219 ), Vector2( 315, 219 ), Vector2( 385, 219 ), Vector2( 385, 219 ), Vector2( 159, 219 ), Vector2( 159, 219 ) ]
}
tracks/11/type = "method"
tracks/11/path = NodePath("Clock_Sound")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("MenuBGM:volume_db")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0.01, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -10.0, -60.0 ]
}
tracks/13/type = "method"
tracks/13/path = NodePath("MenuBGM")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop"
} ]
}
tracks/14/type = "method"
tracks/14/path = NodePath("Hint")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("CanvasLayer/HUD/CenterContainer2/Time:modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("Menu/Label:modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Main" type="Node"]
script = ExtResource( 14 )

[node name="Console" parent="." instance=ExtResource( 3 )]

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
position = Vector2( 0, -753 )
offset = Vector2( 960, 540 )
current = true

[node name="Node2D" type="Node2D" parent="."]

[node name="Hand" parent="Node2D" instance=ExtResource( 2 )]

[node name="Cutting_Board" parent="Node2D" instance=ExtResource( 7 )]
position = Vector2( 960, 637.012 )

[node name="ConveyorBelt" parent="Node2D" instance=ExtResource( 1 )]

[node name="Spoon" parent="Node2D" instance=ExtResource( 4 )]
position = Vector2( 1726.85, 729.815 )

[node name="RiceBox" parent="Node2D" instance=ExtResource( 6 )]
scale = Vector2( 1.4, 1.4 )

[node name="Output" parent="Node2D" instance=ExtResource( 5 )]
position = Vector2( 228.704, 64.9657 )

[node name="Trash" parent="Node2D" instance=ExtResource( 10 )]
position = Vector2( 1649.43, 993.73 )

[node name="BG" type="Sprite" parent="Node2D"]
z_index = -20
texture = ExtResource( 9 )
offset = Vector2( 960, 540 )

[node name="Credit" type="Sprite" parent="Node2D"]
material = SubResource( 1 )
position = Vector2( 0, 181.16 )
texture = ExtResource( 17 )
offset = Vector2( 960, 0 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/HUD"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/HUD/CenterContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 350.0
margin_top = 321.0
margin_right = 1569.0
margin_bottom = 759.0
rect_pivot_offset = Vector2( 609.5, 219 )
size_flags_horizontal = 12
size_flags_vertical = 12
custom_fonts/font = SubResource( 2 )
custom_colors/font_color_shadow = Color( 0.537255, 0.494118, 0.278431, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "OFF WORK"
align = 1
valign = 1

[node name="CenterContainer2" type="CenterContainer" parent="CanvasLayer/HUD"]
anchor_right = 1.0
anchor_bottom = 0.098
margin_bottom = 0.159996
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Time" type="Label" parent="CanvasLayer/HUD/CenterContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 863.0
margin_right = 1056.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_shadow = Color( 0.537255, 0.494118, 0.278431, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "03:00"

[node name="SceneBlocker" type="TextureRect" parent="CanvasLayer/HUD"]
visible = false
modulate = Color( 0.65098, 0.611765, 0.368627, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 28 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -753.0
margin_bottom = -753.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="Menu"]
margin_left = 140.0
margin_top = 80.0
margin_right = 980.0
margin_bottom = 694.0
rect_scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Menu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 960.0
margin_top = -3.0
margin_bottom = -3.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/CenterContainer"]
margin_left = 389.0
margin_top = 474.0
margin_right = 570.0
margin_bottom = 605.0

[node name="Play" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
margin_right = 181.0
margin_bottom = 131.0
custom_fonts/font = ExtResource( 13 )
text = "Play"

[node name="Quit" type="Button" parent="Menu/CenterContainer/VBoxContainer"]
visible = false
margin_top = 135.0
margin_right = 181.0
margin_bottom = 266.0
custom_fonts/font = ExtResource( 13 )
text = "Quit"

[node name="Options" type="HBoxContainer" parent="Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -370.0
margin_top = 51.0
margin_right = -56.0
margin_bottom = 212.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="CheckButton" parent="Menu/Options"]
margin_left = 35.0
margin_right = 177.0
margin_bottom = 161.0
focus_mode = 0
custom_icons/off = ExtResource( 21 )
custom_icons/on = ExtResource( 20 )
pressed = true
enabled_focus_mode = 0

[node name="Sounds" type="CheckButton" parent="Menu/Options"]
margin_left = 181.0
margin_right = 314.0
margin_bottom = 161.0
focus_mode = 0
custom_icons/off = ExtResource( 22 )
custom_icons/on = ExtResource( 23 )
pressed = true
enabled_focus_mode = 0

[node name="Label" type="Label" parent="Menu"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -369.0
margin_top = -50.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0.541176, 0.498039, 0.282353, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 2
text = "Â© 2020 unSAME studio"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Over" type="Control" parent="."]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -753.0
margin_bottom = -753.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="Game_Over"]
anchor_right = 1.0
anchor_bottom = 0.81
margin_bottom = 0.199951
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Game_Over/CenterContainer"]
margin_left = 659.0
margin_top = 174.0
margin_right = 1260.0
margin_bottom = 700.0
alignment = 1

[node name="Title" type="Label" parent="Game_Over/CenterContainer/VBoxContainer"]
margin_right = 601.0
margin_bottom = 188.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_shadow = Color( 0.537255, 0.494118, 0.278431, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Game Over"
align = 1

[node name="Salary" type="Label" parent="Game_Over/CenterContainer/VBoxContainer"]
margin_top = 192.0
margin_right = 601.0
margin_bottom = 317.0
custom_fonts/font = ExtResource( 13 )
custom_colors/font_color_shadow = Color( 0.537255, 0.494118, 0.278431, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "SALARY: 12301yen"
align = 1

[node name="Rank" type="Label" parent="Game_Over/CenterContainer/VBoxContainer"]
margin_top = 321.0
margin_right = 601.0
margin_bottom = 391.0
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color_shadow = Color( 0.537255, 0.494118, 0.278431, 1 )
custom_constants/shadow_offset_x = 5
custom_constants/shadow_offset_y = 5
text = "Rank: Company Destoryer"
align = 1

[node name="Continue" type="Button" parent="Game_Over/CenterContainer/VBoxContainer"]
margin_top = 395.0
margin_right = 601.0
margin_bottom = 526.0
custom_fonts/font = ExtResource( 13 )
text = "Continue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/game_over = SubResource( 5 )
anims/menu_intro = SubResource( 6 )
anims/menu_outro = SubResource( 7 )
anims/scene_intro = SubResource( 8 )

[node name="Clock_Sound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 25 )
volume_db = -5.0
bus = "SFX"

[node name="Tap_Sound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 24 )
bus = "SFX"

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "BGM"

[node name="MenuBGM" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
volume_db = -12.5126
autoplay = true
bus = "BGM"

[node name="Hint" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -8.0
bus = "BGM"

[node name="GameOver" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 26 )
volume_db = -8.0
bus = "BGM"

[node name="Timer" type="Timer" parent="."]
wait_time = 180.0
[connection signal="pressed" from="Menu/CenterContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="toggled" from="Menu/Options/Music" to="." method="_on_Music_toggled"]
[connection signal="toggled" from="Menu/Options/Sounds" to="." method="_on_Sounds_toggled"]
[connection signal="pressed" from="Game_Over/CenterContainer/VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
